@@ -96,6 +96,16 @@ task buildDocker(type: Docker, dependsOn: build) {
 			[
 					"java",
 					"-Djava.security.egd=file:/dev/./urandom",
+					"-Dcom.sun.management.jmxremote",
+                    "-Dcom.sun.management.jmxremote.authenticate=false",
+                    "-Dcom.sun.management.jmxremote.ssl=false",
+                    "-Dcom.sun.management.jmxremote.local.only=false",
+                    "-Dcom.sun.management.jmxremote.port=1099",
+                    "-Dcom.sun.management.jmxremote.rmi.port=1099",
+                    "-Djava.rmi.server.hostname=127.0.0.1",
+                    "-XX:+UnlockExperimentalVMOptions",
+                    "-XX:+UseCGroupMemoryLimitForHeap",
+                    "-XX:MaxRAMFraction=1",
 					"-jar",
 					"/${jar.baseName}.jar"
 			]
